--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server/index.js",
-    "server": "nodemon ./server/index.js",
+    "start": "node ./socket/index.js",
+    "socket": "nodemon ./socket/index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run socket\" \"npm run client\"",
     "build": "npm run build --prefix client",
     "install": "npm install --prefix client && npm run build --prefix client"
   },
